Release v1.0.7-qa
